# alex

./: .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  CHANGELOG.md  CREDENTIALS.md  Cargo.toml  HANDOFF-middleware-beta21.md  HANDOFF-pi-refusal-no-reroute.md  README.md  TODO.md  alex  alexandria  app.js  appcast-beta.xml  appcast.xml  build-manifest.json  build-signed.md  build-signed.sh  check-gatekeeper.sh  fri.md  harnesses.md  index.html  install-beta.sh  install-dmg.sh  install-macos.sh  install-release.ps1  install-release.sh  install-windows.ps1  install.sh  lar-format.md  mac-ui.md  now.md  styles.css  test-all.sh  test.sh  testing-followups.md  testing.md  tokensrc.md  trace-browser-test.md  (+1 more)
crates/alex/: Cargo.toml  build.rs
crates/alex-auth/: Cargo.toml
crates/alex-auth/src/: lib.rs  login.rs  sessions.rs  vault_bundle.rs
crates/alex-core/: Cargo.toml
crates/alex-core/src/: amp_usage.rs  exec.rs  grok_billing.rs  lib.rs  openrouter_catalog.rs  quota.rs  resume_context.rs  testing_overrides.rs  translate.rs
crates/alex-core/tests/fixtures/: openrouter_models.json
crates/alex-fakeprov/: Cargo.toml  README.md
crates/alex-fakeprov/fixtures/amp/: usage.json
crates/alex-fakeprov/fixtures/anthropic/: anthropic-fable-refusal-200.sse  anthropic_response.json  default-message-stream.meta.json  default-message-stream.sse  default-message.json  default-message.meta.json  models.json  profile.json  token.json  usage.json  usage.meta.json
crates/alex-fakeprov/fixtures/cliproxyapi/: capabilities.json  default-chat-stream.sse  default-chat.json  models.json
crates/alex-fakeprov/fixtures/exo/: default-chat-stream.sse  default-chat.json  models.json
crates/alex-fakeprov/fixtures/gemini/: code-assist-generate-stream.sse  code-assist-generate.json  default-generate-stream.meta.json  default-generate-stream.sse  default-generate.json  load-code-assist.json  models.json  onboard-user.json
crates/alex-fakeprov/fixtures/github/: manifest.json  releases.json
crates/alex-fakeprov/fixtures/kimi/: default-chat-stream.sse  default-chat.json  device-authorization.json  models.json  quota-exhausted.json  token.json  usage.json
crates/alex-fakeprov/fixtures/npm/: dario-latest.json
crates/alex-fakeprov/fixtures/openai/: codex-usage.json  default-chat-stream.sse  default-chat.json  default-codex-responses.meta.json  default-codex-responses.sse  default-responses-stream.meta.json  default-responses.json  (+5 more)
crates/alex-fakeprov/scenarios/: auth-expired.json  device-flow-slow-poll.json  gemini-code-assist-onboard-flow.json  harness-tool-roundtrip.json  kimi-quota-exhausted.json  ok.json  openrouter-catalog-empty.json  overloaded-529.json  rate-limit-then-ok.json  stream-stall.json
crates/alex-fakeprov/src/: lib.rs  main.rs
crates/alex-lar/: Cargo.toml
crates/alex-lar-scale/: Cargo.toml
crates/alex-lar-scale/src/: lib.rs  main.rs
crates/alex-lar/examples/: container_gate.rs  design_gate.rs  generate_golden.rs  search_filter_gate.rs  verify_conformance.rs
crates/alex-lar/fuzz/: .gitignore  Cargo.toml  README.md
crates/alex-lar/proptest-regressions/: archive.txt
crates/alex-lar/src/: archive.rs  chunker.rs  conversation.rs  event.rs  exchange_metadata.rs  format.rs  index.rs  lib.rs  main.rs  model.rs  page.rs  range.rs  replay.rs  search.rs
crates/alex-lar/testdata/: README.md  conformance-v1.json  v1-envelope.hex  v1.conversation-dag.lar  v1.exchange-metadata.lar  v1.future-minor-optional.lar
crates/alex-lar/tests/: conformance.rs  conformance_corpus.rs  conversation_dag.rs  events.rs  exchange_metadata.rs  golden_compatibility.rs  index_benchmark.rs  reconstruction_benchmark.rs  recovery.rs  replay.rs
crates/alex-lar/testsupport/: golden.rs
crates/alex-middleware/: Cargo.toml  README.md
crates/alex-middleware/src/: builtins.rs  dto.rs  engine.rs  guard.rs  headers.rs  lib.rs  rule.rs  validate.rs
crates/alex-proxy/: Cargo.toml
crates/alex-proxy/examples/: cliproxyapi_v1_fixture.rs
crates/alex-proxy/src/: lib.rs  middleware.rs  notify.rs  plugins.rs  web.rs
crates/alex-proxy/tests/: fakeprov_router.rs  lar_rollout_benchmark.rs
crates/alex-proxy/web/: app.js  index.html  styles.css
crates/alex-store/: Cargo.toml
crates/alex-store/src/: lar_archive_ops.rs  lar_catalog.rs  lar_conversation.rs  lar_conversation_adapter.rs  lar_fts.rs  lar_gc.rs  lar_grep.rs  lar_jsonl_import.rs  lar_observability.rs  lar_repack.rs  lar_stage_content.rs  lar_stream_replay.rs  lar_tool_timeline.rs  lar_transaction.rs  lar_verify.rs  legacy_import.rs  lib.rs  live_body_store.rs  models.json  recording.rs  standalone_export.rs  standalone_import.rs
crates/alex-store/tests/: jsonl_import.rs  lar_archive_ops.rs  lar_backup_reset.rs  lar_conversation_events.rs  lar_crash_boundaries.rs  lar_exchange_capture.rs  lar_fts.rs  lar_migration_matrix.rs  lar_repack_adversarial.rs  lar_repack_combined_safety.rs  lar_rollout_benchmark.rs  lar_search_benchmark.rs  lar_session_rotation.rs  lar_stage_content.rs  lar_stream_replay.rs  lar_tool_timeline.rs  lar_transaction.rs  legacy_lar_import.rs  live_lar_benchmark.rs  standalone_lar_import.rs
crates/alex-wrap/: Cargo.toml
crates/alex-wrap/config/: wrap-harnesses.json
crates/alex-wrap/src/: capture.rs  catalog.rs  credentials.rs  launch.rs  lib.rs  reverse.rs  run.rs
crates/alex/config/: harnesses.json
crates/alex/src/: cliproxyapi.rs  commands.rs  dario.rs  doctor.rs  harness_connect.rs  harness_e2e.rs  lar_cli.rs  light.rs  main.rs  reset.rs  resume.rs  selfupdate.rs  status.rs  telegram.rs  tray.rs  tui.rs  ui.rs  windows_tray.rs
crates/alex/tests/: harness_matrix.rs  harness_version_bump.rs
crates/alexandria-auth/: Cargo.toml
crates/alexandria-auth/src/: lib.rs  login.rs  sessions.rs
crates/alexandria-daemon/: Cargo.toml
crates/alexandria-daemon/config/: harnesses.json
crates/alexandria-daemon/src/: harness_e2e.rs  main.rs  tui.rs
crates/alexandria-proxy/: Cargo.toml
crates/alexandria-proxy/src/: lib.rs
crates/alexandria-store/: Cargo.toml
crates/alexandria-store/src/: lib.rs  models.json
(+468 files in other folders)
