[workspace]
resolver = "2"
members = [
  "crates/alex-core",
  "crates/alex-auth",
  "crates/alex-store",
  "crates/alex-proxy",
  "crates/alex",
]

[workspace.package]
version = "0.1.10"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/madhavajay/alex"

[workspace.dependencies]
alex-core = { path = "crates/alex-core", version = "0.1.10" }
alex-auth = { path = "crates/alex-auth", version = "0.1.10" }
alex-store = { path = "crates/alex-store", version = "0.1.10" }
alex-proxy = { path = "crates/alex-proxy", version = "0.1.10" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
toml = "0.8"
flate2 = "1"
jpeg-decoder = { version = "0.3", default-features = false }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
dirs = "5"
