[package]
name = "alex-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Credential vault and OAuth/device login flows for Alex"

[dependencies]
alex-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
argon2 = { workspace = true }
aes-gcm = { workspace = true }
