[package]
name = "alex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core routing, format translation, usage parsing, and pricing logic for Alex"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
