[package]
name = "alex-fakeprov"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic fake upstream provider server for Alex tests"

[[bin]]
name = "alex-fakeprov"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
alex-core = { workspace = true }
reqwest = { workspace = true }
