[package]
name = "alex-lar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Crash-recoverable, lazy indexed LLM archive for Alex"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crc32fast = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
