[package]
name = "alex-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP routing proxy and admin API for Alex"

[dependencies]
alex-middleware = { workspace = true }
alex-core = { workspace = true }
alex-auth = { workspace = true }
alex-store = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
alex-fakeprov = { path = "../alex-fakeprov" }
tower = "0.5"
