[package]
name = "alex-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite trace store, pricing seed, and analytics for alex (Alexandria)"

[dependencies]
alex-core = { workspace = true }
alex-lar = { path = "../alex-lar" }
anyhow = { workspace = true }
base64 = { workspace = true }
blake3 = "1"
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
flate2 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
libc = "0.2"
