[package]
name = "alex-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite trace store, pricing seed, and analytics for Alex"

[dependencies]
alex-lar = { workspace = true }
alex-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
flate2 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
