[package]
name = "alex-wrap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Harness wrap layer for special capture (Amp and other non-base-URL clients)"

[dependencies]
alex-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
