[package]
name = "alex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Alexandria: local LLM credential vault, multi-provider routing proxy, and trace capture daemon"
readme = "../../README.md"

[[bin]]
name = "alex"
path = "src/main.rs"

[[bin]]
name = "alexandria"
path = "src/main.rs"

[dependencies]
alex-core = { workspace = true }
alex-auth = { workspace = true }
alex-store = { workspace = true }
alex-proxy = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures-util = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
flate2 = { workspace = true }
jpeg-decoder = { workspace = true }
base64 = { workspace = true }
