[package]
name = "alex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Alex: local LLM credential vault, multi-provider routing proxy, and trace capture daemon"
readme = "../../README.md"

[[bin]]
name = "alex"
path = "src/main.rs"

[dependencies]
alex-core = { workspace = true }
alex-auth = { workspace = true }
alex-store = { workspace = true }
alex-proxy = { workspace = true }
alex-wrap = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures-util = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
