[package]
name = "alexandria-auth"
version.workspace = true
edition.workspace = true

[dependencies]
alexandria-core = { path = "../alexandria-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
