[package]
name = "alexandria-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "alexandria"
path = "src/main.rs"

[dependencies]
alexandria-core = { path = "../alexandria-core" }
alexandria-auth = { path = "../alexandria-auth" }
alexandria-store = { path = "../alexandria-store" }
alexandria-proxy = { path = "../alexandria-proxy" }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures-util = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
flate2 = { workspace = true }
jpeg-decoder = { workspace = true }
base64 = { workspace = true }
