[package]
name = "alexandria-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
alexandria-core = { path = "../alexandria-core" }
alexandria-auth = { path = "../alexandria-auth" }
alexandria-store = { path = "../alexandria-store" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
