[package]
name = "alexandria-store"
version.workspace = true
edition.workspace = true

[dependencies]
alexandria-core = { path = "../alexandria-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
flate2 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
