[package]
name = "alexandria-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite trace store, pricing seed, and analytics for alex (Alexandria)"

[dependencies]
alexandria-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
flate2 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
