[package]
name = "alex-lar-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
alex-lar = { path = ".." }
libfuzzer-sys = "0.4"

[workspace]
members = ["."]

[[bin]]
name = "record_framing"
path = "fuzz_targets/record_framing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "zstd_decompression"
path = "fuzz_targets/zstd_decompression.rs"
test = false
doc = false
bench = false

[[bin]]
name = "metadata_indexes"
path = "fuzz_targets/metadata_indexes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "manifest_recovery"
path = "fuzz_targets/manifest_recovery.rs"
test = false
doc = false
bench = false
